# ethereum_research

./: .gitignore  Cargo.toml  Dockerfile  README.md  book.toml  docker-compose.yml
.github/workflows/: book.yaml  rust.yml
docs/: SUMMARY.md
docs/curriculum/: index.md
journal/src/: SUMMARY.md
journal/src/curriculum/: index.md
journal/src/goals/: index.md
journal/src/overview/: curriculum.md  index.md  motivation.md
journal/src/poseidon/: attacks.md  construction.md  index.md  linear_layer.md  permutation.md  round_constants.md  s-boxes.md  scalar_field.md  sponge.md
journal/src/resources/: blogs_and_code.md  books.md  index.md  papers.md  papers_books.md  people_courses.md  projects_tools.md  videos_talks.md
journal/src/security/: algebraic_cryptanalysis.md  differential_cryptanalysis.md  index.md  linear_cryptanalysis.md  new_thoughts.md
poseidon/: Cargo.toml  neptune.rs
poseidon/src/: lib.rs
poseidon/src/home_baked_crypto/: fields.rs  generate_constants.rs  hasher.rs  large_bit_field.rs  mod.rs  small_bit_field.rs
poseidon/src/home_baked_crypto/constants/: generate.rs  mod.rs
poseidon/src/home_baked_crypto/fields/: large_field.rs  mod.rs  small_field.rs
poseidon/src/implemenations/: filecoin_hashers.rs  mod.rs  neptune.rs  poseidon_hash.rs
poseidon/src/implementations/: mod.rs  neptune.rs
poseidon/src/python_transcription/: mod.rs  parameters.rs  round_constants.rs  round_numbers.rs
src/: lib.rs  neptune.rs
src/home_baked_crypto/: constants.rs  mod.rs
src/implemenations/: filecoin_hashers.rs  mod.rs  neptune.rs  poseidon_hash.rs  starknet_crypto.rs
src/schedule/: index.md
