[package]
name = "poseidon"
version = "0.1.0"
edition = "2018"

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.17"
bit-vec = "0.6.3"
lazy_static = "1.4.0"
# ff = { version = "0.13.0", features = ["derive"] }
# pairing = {package = "pairing_ce", version = "0.24.*" }

# netptune 
neptune = "13.0.0"
blstrs = "0.7.1"
typenum = "1.17.0"

# refrenced in paper
poseidon_hash = { git = "https://github.com/shamatar/poseidon_hash.git"}


ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
serde_json = "1.0"

# Starknet Crypto
starknet-crypto = { version = "0.6.1"}

# File coin Hashers
filecoin-hashers = { version = "11.1.0" }
merkletree = { version = "0.23.0" }
generic-array = { version = "1.0.0" }

# For book
mdbook = "0.4.35"
cargo-make = "0.37.2"
mdbook-katex = "0.5.8"