[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"
authors = ["Colin Robers", "Waylon Jepsen"]


[dependencies]
serde_json = "1.0"

# For Finite Fields
num-bigint = "0.4.4"
num-traits = "0.2.17"
ff = { version="0.13.0", features = ["derive"]}
rand = "0.8.5"
serde = "1.0.193"

# For Neptune
neptune = {version = "13.0.0", features = ["abomonation"]}
blstrs = "0.7.1"
typenum = "1.17.0"

# refrenced in paper
poseidon_hash = { git = "https://github.com/shamatar/poseidon_hash.git"}

# Starknet Crypto
starknet-crypto = { version = "0.6.1"}

# File coin Hashers
filecoin-hashers = { version = "11.1.0" }
merkletree = { version = "0.23.0" }
generic-array = { version = "1.0.0" }

byteorder = "1.4.3"